# hcpl

./: .gitignore  Cargo.toml  README.md
algebra/: Cargo.toml
algorithm/: Cargo.toml
algorithm/src/: fwht.rs  lib.rs
data_structure/: Cargo.toml
data_structure/src/: lib.rs  segment_tree.rs
divide_and_conquer_dp/: Cargo.toml
divide_and_conquer_dp/src/: lib.rs
fwht/: Cargo.toml
fwht/src/: lib.rs
hcpl_algebra/: Cargo.toml
hcpl_algebra/src/: lib.rs  monoid.rs  ring.rs
hcpl_complex/: Cargo.toml
hcpl_complex/src/: lib.rs
hcpl_divide_and_conquer/: Cargo.toml
hcpl_divide_and_conquer/src/: lib.rs
hcpl_divide_and_conquer_dp/src/: lib.rs
hcpl_fft/: Cargo.toml
hcpl_fft/src/: lib.rs  real.rs  stack_stack.rs
hcpl_fwht/: Cargo.toml
hcpl_integer/: Cargo.toml
hcpl_integer/src/: lib.rs
hcpl_io/: Cargo.toml  README.md
hcpl_io/src/: cin.rs  cout.rs  input_macro.rs  lib.rs  output_macro.rs
hcpl_mo/: Cargo.toml
hcpl_mo/src/: lib.rs
hcpl_modnum/: Cargo.toml
hcpl_modnum/src/: lib.rs
hcpl_number_theory/: Cargo.toml
hcpl_number_theory/src/: gcd.rs  lib.rs  roots.rs
hcpl_proc_macro/: Cargo.toml
hcpl_proc_macro/src/: gen.rs  lib.rs  result.rs
hcpl_recursion/: Cargo.toml
hcpl_rmq/: Cargo.toml
hcpl_rmq/src/: lib.rs
hcpl_segment_tree/: Cargo.toml
hcpl_tensor/: Cargo.toml
hcpl_union_find/: Cargo.toml
hcpl_union_find/src/: lib.rs  tagged.rs
hcpl_util/: Cargo.toml
integer/: Cargo.toml
io/: Cargo.toml
modnum/: Cargo.toml
number_theory/: Cargo.toml
segment_tree/: Cargo.toml
src/: integer.rs  lib.rs  util.rs
util/: Cargo.toml
(+30 files in other folders)
