[workspace]
members = [
  "hcpl_algebra",
  "hcpl_divide_and_conquer_dp",
  "hcpl_fwht",
  "hcpl_integer",
  "hcpl_io",
  "hcpl_mo",
  "hcpl_modnum",
  "hcpl_number_theory",
  "hcpl_segment_tree",
  "hcpl_recursion",
  "hcpl_rmq",
  "hcpl_tensor",
  "hcpl_union_find",
  "hcpl_util",
  "hcpl_proc_macro",
]
