[package]
name = "hcpl_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.50", features = ["full", "extra-traits"] }

[lib]
proc-macro = true